--- a/bookmyshow/client/src/App.css
+++ b/bookmyshow/client/src/App.css
@@ -5,3 +5,41 @@
 .cursor-pointer {
   cursor: pointer;
 }
+
+.mt-4 {
+  margin-top: 2rem;
+}
+
+.show-ul {
+  display: flex;
+  list-style: none;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+  padding-left: 0;
+}
+
+.show-ul li {
+  padding: 0.75rem 1rem;
+  border: 1px solid #bbb;
+  border-radius: 5px;
+  cursor: pointer;
+  color: orange;
+  transition: all 0.1s ease-in;
+}
+
+.show-ul li:hover {
+  background-color: orange;
+  color: #fff;
+}
+
+.page-padding {
+  padding: 10px 20px;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.align-center {
+  align-items: center;
+}
