Impleted the show api for partner, managed redux states for shows, and ui for partner to add, update or delete the show

--- a/bookmyshow/client/src/App.css
+++ b/bookmyshow/client/src/App.css
@@ -141,5 +141,11 @@
 
 .btn-tables {
   display: block;
-  width: 50px;
+}
+
+.card img {
+  max-width: 250px;
+  min-width: 250px;
+  border-radius: 10px;
+  min-height: 250px;
 }
