--- a/bookmyshow/client/src/App.css
+++ b/bookmyshow/client/src/App.css
@@ -122,9 +122,20 @@
   position: absolute;
 }
 
+.show-ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.p-2 {
+  padding: 2rem;
+}
+
 .show-ul li:hover {
   background-color: orange;
   color: #fff;
+  cursor: pointer;
 }
 
 .page-padding {
